cmake_minimum_required(VERSION 3.21)
project(untitled40)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled40 classes/main.cpp classes/StudentController.h classes/StudentController.cpp classes/SubjectDefinition.h
        classes/SubjectDefinition.cpp classes/Student.h classes/Student.cpp  classes/SubjectData.h classes/SubjectData.cpp
        classes/SubjectController.h classes/SubjectController.cpp)
#add_executable(untitled40 classes/main.cpp)
#add_executable(untitled40 classes/main.cpp)
#add_executable(untitled40 classes/main.cpp)
#add_executable(untitled40 classes/main.cpp)
#add_executable(untitled40 classes/main.cpp)
